--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="header-title">DIRETORIA DE REGULAÇÃO</h1>
             <h2 class="header-subtitle">Controle de Pêndencias - Sistema Vivver</h2>
             <h3 class="header-subtitle">Central de Marcação de Consultas / Consolidado Geral</h3>
-            <p class="footer-credits">Referência Giovanna Telefone - 3198-6768</p>
+            <p class="footer-credits">Referência Giovanna</p>
             <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação - Ceaps</p>
         </div>
     </header>
@@ -198,7 +198,6 @@
         <p>DIRETORIA DE REGULAÇÃO</p>
         <p>CENTRAL DE MARCAÇÃO DE CONSULTAS</p>
         <p>REFERÊNCIA GIOVANNA</p>
-        <p>Telefone 3198-6768 </p>
         <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação - Ceaps</p>
     </footer>
 
@@ -215,3 +214,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
