--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header-content">
             <h1 class="header-title">DIRETORIA DE REGULAÇÃO</h1>
-            <h2 class="header-subtitle">Controle de Pêndencias - Sistema Vivver</h2>
+            <h2 class="header-subtitle">Controle de Pendências - Sistema Vivver</h2>
             <h3 class="header-subtitle">Central de Marcação de Consultas / Consolidado Geral</h3>
             <p class="footer-credits">Referência Giovanna</p>
             <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação - Ceaps</p>
@@ -214,4 +214,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
