--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <!-- ✅ GRÁFICO PENDÊNCIAS POR DISTRITO (DESTAQUE - LINHA COMPLETA) -->
         <div class="chart-box chart-box-full">
-            <h3 class="chart-title">Pendências por Distrito</h3>
+            <h3 class="chart-title"> Registros de Pendências por Distrito</h3>
             <div class="chart-wrapper-distrito">
                 <canvas id="chartDistritos"></canvas>
             </div>
@@ -176,7 +176,7 @@
 
             <!-- ✅ NOVO GRÁFICO: PENDÊNCIAS POR PRESTADOR -->
             <div class="chart-box">
-                <h3 class="chart-title">Pendências por Prestador</h3>
+                <h3 class="chart-title">Registros por Prestador</h3>
                 <div class="chart-wrapper">
                     <canvas id="chartPrestadores"></canvas>
                 </div>
@@ -214,5 +214,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
