--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <!-- ✅ GRÁFICO PENDÊNCIAS POR DISTRITO (DESTAQUE - LINHA COMPLETA) -->
         <div class="chart-box chart-box-full">
-            <h3 class="chart-title"> Registros de Pendências por Distrito</h3>
+            <h3 class="chart-title"> Registros Geral de Pendências por Distrito</h3>
             <div class="chart-wrapper-distrito">
                 <canvas id="chartDistritos"></canvas>
             </div>
@@ -161,14 +161,14 @@
         <!-- Gráficos -->
         <div class="charts-container">
             <div class="chart-box">
-                <h3 class="chart-title">Registros por Especialidade</h3>
+                <h3 class="chart-title">Registros Geral de Pendências por Especialidade</h3>
                 <div class="chart-wrapper">
                     <canvas id="chartEspecialidades"></canvas>
                 </div>
             </div>
 
             <div class="chart-box">
-                <h3 class="chart-title">Registros por Status</h3>
+                <h3 class="chart-title">Registros Geral de Pendências por Status</h3>
                 <div class="chart-wrapper chart-wrapper-status">
                     <canvas id="chartStatus"></canvas>
                 </div>
@@ -176,7 +176,7 @@
 
             <!-- ✅ NOVO GRÁFICO: PENDÊNCIAS POR PRESTADOR -->
             <div class="chart-box">
-                <h3 class="chart-title">Registros por Prestador</h3>
+                <h3 class="chart-title">Registros Geral de Pendências por Prestador</h3>
                 <div class="chart-wrapper">
                     <canvas id="chartPrestadores"></canvas>
                 </div>
@@ -214,6 +214,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
