--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <i class="fas fa-clipboard-list"></i>
                 </div>
                 <div class="card-info">
-                    <h3 class="card-title">Total de Registros</h3>
+                    <h3 class="card-title">Total de Registros Geral</h3>
                     <p class="card-value" id="totalPendencias">0</p>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
 
-                <!-- ✅ FILTRO POR MÊS -->
+                <!-- FILTRO POR MÊS -->
                 <div class="filter-box">
                     <label>Filtrar por Mês:</label>
                     <select class="filter-select" id="filterMes" onchange="applyFilters()">
@@ -150,16 +150,48 @@
             </button>
         </div>
 
-        <!-- ✅ GRÁFICO PENDÊNCIAS POR DISTRITO (DESTAQUE - LINHA COMPLETA) -->
+        <!-- ✅ NOVO: GRÁFICO PENDÊNCIAS NÃO RESOLVIDAS POR DISTRITO (BARRAS VERMELHAS) - AGORA PRIMEIRO -->
         <div class="chart-box chart-box-full">
-            <h3 class="chart-title"> Registros Geral de Pendências por Distrito</h3>
+            <h3 class="chart-title">Pendências Não Resolvidas por Distrito</h3>
+            <div class="chart-wrapper-distrito">
+                <canvas id="chartDistritosPendentes"></canvas>
+            </div>
+        </div>
+
+        <!-- ✅ GRÁFICO PENDÊNCIAS POR DISTRITO (DESTAQUE - LINHA COMPLETA) - AGORA SEGUNDO -->
+        <div class="chart-box chart-box-full">
+            <h3 class="chart-title">Registros Geral de Pendências por Distrito</h3>
             <div class="chart-wrapper-distrito">
                 <canvas id="chartDistritos"></canvas>
             </div>
         </div>
 
+        <!-- ✅ NOVO: GRÁFICO DE RESOLUTIVIDADE POR DISTRITO -->
+        <div class="chart-box chart-box-full">
+            <h3 class="chart-title">Estatística de Resolutividade por Distrito</h3>
+            <div class="chart-wrapper-distrito">
+                <canvas id="chartResolutividadeDistrito"></canvas>
+            </div>
+        </div>
+
         <!-- Gráficos -->
         <div class="charts-container">
+            <!-- ✅ GRÁFICO: PENDÊNCIAS POR PRESTADOR - MOVIDO PARA ANTES DE ESPECIALIDADES -->
+            <div class="chart-box">
+                <h3 class="chart-title">Registros Geral de Pendências por Prestador</h3>
+                <div class="chart-wrapper">
+                    <canvas id="chartPrestadores"></canvas>
+                </div>
+            </div>
+
+            <!-- ✅ NOVO: GRÁFICO PENDÊNCIAS NÃO RESOLVIDAS POR PRESTADOR (BARRAS VERDE ESCURO) -->
+            <div class="chart-box">
+                <h3 class="chart-title">Pendências Não Resolvidas por Prestador</h3>
+                <div class="chart-wrapper">
+                    <canvas id="chartPrestadoresPendentes"></canvas>
+                </div>
+            </div>
+
             <div class="chart-box">
                 <h3 class="chart-title">Registros Geral de Pendências por Especialidade</h3>
                 <div class="chart-wrapper">
@@ -174,19 +206,19 @@
                 </div>
             </div>
 
-            <!-- ✅ NOVO GRÁFICO: PENDÊNCIAS POR PRESTADOR -->
-            <div class="chart-box">
-                <h3 class="chart-title">Registros Geral de Pendências por Prestador</h3>
-                <div class="chart-wrapper">
-                    <canvas id="chartPrestadores"></canvas>
-                </div>
-            </div>
-
             <!-- GRÁFICO DE PIZZA -->
             <div class="chart-box">
                 <h3 class="chart-title">Distribuição Percentual por Status</h3>
                 <div class="chart-wrapper chart-wrapper-pizza">
                     <canvas id="chartPizzaStatus"></canvas>
+                </div>
+            </div>
+
+            <!-- ✅ NOVO: GRÁFICO DE RESOLUTIVIDADE POR PRESTADOR -->
+            <div class="chart-box">
+                <h3 class="chart-title">Estatística de Resolutividade por Prestador</h3>
+                <div class="chart-wrapper">
+                    <canvas id="chartResolutividadePrestador"></canvas>
                 </div>
             </div>
         </div>
@@ -214,7 +246,4 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
 
