--- a/index.html
+++ b/index.html
@@ -38,6 +38,102 @@
             </div>
         </div>
 
+        <!-- ✅ NOVA SEÇÃO: PAINÉIS DISTRITO -->
+        <div class="paineis-distrito-section">
+            <h3 class="section-title">
+                <i class="fas fa-map-marked-alt"></i> PAINÉIS DISTRITO
+            </h3>
+            <div class="paineis-distrito-grid">
+                <a href="https://compartilhacmc-commits.github.io/distritoeldorado/" target="_blank" class="painel-card painel-eldorado">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>ELDORADO</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritosede/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>SEDE</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritovargemdasflores/" target="_blank" class="painel-card painel-vargem">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>VARGEM DAS FLORES</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritonacional/" target="_blank" class="painel-card painel-nacional">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>NACIONAL</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoressaca/" target="_blank" class="painel-card painel-ressaca">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>RESSACA</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoindustrial/" target="_blank" class="painel-card painel-industrial">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>INDUSTRIAL</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritopetrolandia/" target="_blank" class="painel-card painel-petrolandia">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>PETROLÂNDIA</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoriacho/" target="_blank" class="painel-card painel-riacho">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>RIACHO</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+            </div>
+        </div>
+
         <!-- Cards de Métricas -->
         <div class="cards-grid">
             <div class="metric-card card-primary">
