--- a/index.html
+++ b/index.html
@@ -38,145 +38,6 @@
             </div>
         </div>
 
-        <!-- ✅ NOVA SEÇÃO: PAINÉIS DISTRITO -->
-        <div class="paineis-distrito-section">
-            <h3 class="section-title">
-                <i class="fas fa-map-marked-alt"></i> PAINÉIS DISTRITO
-            </h3>
-            <div class="paineis-distrito-grid">
-                <a href="https://compartilhacmc-commits.github.io/distritoeldorado/" target="_blank" class="painel-card painel-eldorado">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>ELDORADO</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritosede/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>SEDE</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritovargemdasflores/" target="_blank" class="painel-card painel-vargem">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>VARGEM DAS FLORES</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritonacional/" target="_blank" class="painel-card painel-nacional">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>NACIONAL</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritoressaca/" target="_blank" class="painel-card painel-ressaca">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>RESSACA</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritoindustrial/" target="_blank" class="painel-card painel-industrial">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>INDUSTRIAL</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritopetrolandia/" target="_blank" class="painel-card painel-petrolandia">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>PETROLÂNDIA</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritoriacho/" target="_blank" class="painel-card painel-riacho">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>RIACHO</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-            </div>
-        </div>
-
-        <!-- Cards de Métricas -->
-        <div class="cards-grid">
-            <div class="metric-card card-primary">
-                <div class="card-icon">
-                    <i class="fas fa-clipboard-list"></i>
-                </div>
-                <div class="card-info">
-                    <h3 class="card-title">Total de Registros Geral</h3>
-                    <p class="card-value" id="totalPendencias">0</p>
-                </div>
-            </div>
-
-            <div class="metric-card card-warning">
-                <div class="card-icon">
-                    <i class="fas fa-clock"></i>
-                </div>
-                <div class="card-info">
-                    <h3 class="card-title">Vencendo em 15 Dias</h3>
-                    <p class="card-value" id="pendencias15">0</p>
-                </div>
-            </div>
-
-            <div class="metric-card card-danger">
-                <div class="card-icon">
-                    <i class="fas fa-exclamation-triangle"></i>
-                </div>
-                <div class="card-info">
-                    <h3 class="card-title">Vencendo em 30 Dias</h3>
-                    <p class="card-value" id="pendencias30">0</p>
-                </div>
-            </div>
-
-            <div class="metric-card card-info">
-                <div class="card-icon">
-                    <i class="fas fa-percentage"></i>
-                </div>
-                <div class="card-info">
-                    <h3 class="card-title">Porcentagem Filtrada</h3>
-                    <p class="card-value" id="percentFiltrados">100.0%</p>
-                </div>
-            </div>
-        </div>
-
         <!-- Seção de Filtros -->
         <div class="filters-container">
             <h3 class="section-title">
@@ -232,18 +93,173 @@
                     </div>
                 </div>
 
-                <!-- FILTRO POR MÊS -->
+                <!-- ✅ FILTRO POR MÊS (MULTI-SELECT COM BOTÕES) -->
                 <div class="filter-box">
                     <label>Filtrar por Mês:</label>
-                    <select class="filter-select" id="filterMes" onchange="applyFilters()">
-                        <option value="">Todos os Meses</option>
-                    </select>
+                    <div class="multi-select" id="msMes">
+                        <button type="button" class="multi-select-btn" onclick="toggleMultiSelect('msMes')">
+                            <span class="multi-select-text" id="msMesText">Todos os Meses</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </button>
+                        <div class="multi-select-panel" id="msMesPanel"></div>
+                    </div>
+                </div>
+
+                <!-- ✅ NOVO FILTRO POR DISTRITO (MULTI-SELECT COM BOTÕES) -->
+                <div class="filter-box">
+                    <label>Filtrar por Distrito:</label>
+                    <div class="multi-select" id="msDistrito">
+                        <button type="button" class="multi-select-btn" onclick="toggleMultiSelect('msDistrito')">
+                            <span class="multi-select-text" id="msDistritoText">Todos os Distritos</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </button>
+                        <div class="multi-select-panel" id="msDistritoPanel"></div>
+                    </div>
                 </div>
             </div>
 
             <button class="btn btn-clear" onclick="clearFilters()">
                 <i class="fas fa-times-circle"></i> Limpar Filtros
             </button>
+        </div>
+
+        <!-- Cards de Métricas -->
+        <div class="cards-grid">
+            <div class="metric-card card-primary">
+                <div class="card-icon">
+                    <i class="fas fa-clipboard-list"></i>
+                </div>
+                <div class="card-info">
+                    <h3 class="card-title">Total de Registros Geral</h3>
+                    <p class="card-value" id="totalPendencias">0</p>
+                </div>
+            </div>
+
+            <div class="metric-card card-warning">
+                <div class="card-icon">
+                    <i class="fas fa-clock"></i>
+                </div>
+                <div class="card-info">
+                    <h3 class="card-title">Vencendo em 15 Dias</h3>
+                    <p class="card-value" id="pendencias15">0</p>
+                </div>
+            </div>
+
+            <div class="metric-card card-danger">
+                <div class="card-icon">
+                    <i class="fas fa-exclamation-triangle"></i>
+                </div>
+                <div class="card-info">
+                    <h3 class="card-title">Vencendo em 30 Dias</h3>
+                    <p class="card-value" id="pendencias30">0</p>
+                </div>
+            </div>
+
+            <div class="metric-card card-info">
+                <div class="card-icon">
+                    <i class="fas fa-percentage"></i>
+                </div>
+                <div class="card-info">
+                    <h3 class="card-title">Porcentagem Filtrada</h3>
+                    <p class="card-value" id="percentFiltrados">100.0%</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- ✅ SEÇÃO PAINÉIS DISTRITO (TODOS NA COR AZUL) -->
+        <div class="paineis-distrito-section">
+            <h3 class="section-title">
+                <i class="fas fa-map-marked-alt"></i> PAINÉIS DISTRITO
+            </h3>
+            <div class="paineis-distrito-grid">
+                <a href="https://compartilhacmc-commits.github.io/distritoeldorado/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>ELDORADO</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritosede/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>SEDE</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritovargemdasflores/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>VARGEM DAS FLORES</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritonacional/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>NACIONAL</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoressaca/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>RESSACA</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoindustrial/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>INDUSTRIAL</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritopetrolandia/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>PETROLÂNDIA</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoriacho/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>RIACHO</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+            </div>
         </div>
 
         <!-- ✅ 1º GRÁFICO: PENDÊNCIAS NÃO RESOLVIDAS POR DISTRITO (BARRAS VERMELHAS) -->
@@ -344,5 +360,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
