--- a/index.html
+++ b/index.html
@@ -38,6 +38,102 @@
             </div>
         </div>
 
+        <!-- ✅ SEÇÃO PAINÉIS DISTRITO (TODOS NA COR AZUL) -->
+        <div class="paineis-distrito-section">
+            <h3 class="section-title">
+                <i class="fas fa-map-marked-alt"></i> PAINÉIS DISTRITO
+            </h3>
+            <div class="paineis-distrito-grid">
+                <a href="https://compartilhacmc-commits.github.io/distritoeldorado/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>ELDORADO</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritosede/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>SEDE</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritovargemdasflores/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>VARGEM DAS FLORES</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritonacional/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>NACIONAL</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoressaca/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>RESSACA</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoindustrial/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>INDUSTRIAL</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritopetrolandia/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>PETROLÂNDIA</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+
+                <a href="https://compartilhacmc-commits.github.io/distritoriacho/" target="_blank" class="painel-card painel-sede">
+                    <div class="painel-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="painel-info">
+                        <h4>RIACHO</h4>
+                        <p>Acessar Painel</p>
+                    </div>
+                    <i class="fas fa-arrow-right painel-arrow"></i>
+                </a>
+            </div>
+        </div>
+
         <!-- Seção de Filtros -->
         <div class="filters-container">
             <h3 class="section-title">
@@ -166,102 +262,6 @@
             </div>
         </div>
 
-        <!-- ✅ SEÇÃO PAINÉIS DISTRITO (TODOS NA COR AZUL) -->
-        <div class="paineis-distrito-section">
-            <h3 class="section-title">
-                <i class="fas fa-map-marked-alt"></i> PAINÉIS DISTRITO
-            </h3>
-            <div class="paineis-distrito-grid">
-                <a href="https://compartilhacmc-commits.github.io/distritoeldorado/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>ELDORADO</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritosede/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>SEDE</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritovargemdasflores/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>VARGEM DAS FLORES</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritonacional/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>NACIONAL</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritoressaca/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>RESSACA</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritoindustrial/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>INDUSTRIAL</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritopetrolandia/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>PETROLÂNDIA</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-
-                <a href="https://compartilhacmc-commits.github.io/distritoriacho/" target="_blank" class="painel-card painel-sede">
-                    <div class="painel-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="painel-info">
-                        <h4>RIACHO</h4>
-                        <p>Acessar Painel</p>
-                    </div>
-                    <i class="fas fa-arrow-right painel-arrow"></i>
-                </a>
-            </div>
-        </div>
-
         <!-- ✅ 1º GRÁFICO: PENDÊNCIAS NÃO RESOLVIDAS POR DISTRITO (BARRAS VERMELHAS) -->
         <div class="chart-box chart-box-full">
             <h3 class="chart-title">Pendências Não Resolvidas por Distrito</h3>
@@ -330,6 +330,14 @@
                     <canvas id="chartPrestadoresPendentes"></canvas>
                 </div>
             </div>
+
+             <!-- ✅✅✅ GRÁFICO DE PIZZA (LOGO ABAIXO DOS GRÁFICOS DE RESOLUTIVIDADE) -->
+        <div class="chart-box chart-box-full">
+            <h3 class="chart-title">Distribuição Percentual por Status</h3>
+            <div class="chart-wrapper-pizza">
+                <canvas id="chartPizzaStatus"></canvas>
+              </div>
+           </div>
         </div>
 
         <!-- ✅ 5º GRÁFICO: ESPECIALIDADES (BARRAS HORIZONTAIS - POR ÚLTIMO) -->
@@ -363,3 +371,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
