--- a/index.html
+++ b/index.html
@@ -133,17 +133,19 @@
       <h3 class="section-title"><i class="fas fa-filter"></i> Filtros</h3>
 
       <div class="filters-grid">
+        <!-- 1️⃣ DISTRITO -->
         <div class="filter-box">
-          <label>Status:</label>
-          <div class="multi-select" id="msStatus">
-            <button type="button" class="multi-select-btn" onclick="toggleMultiSelect('msStatus')">
-              <span class="multi-select-text" id="msStatusText">Todos</span>
+          <label>Filtrar por Distrito:</label>
+          <div class="multi-select" id="msDistrito">
+            <button type="button" class="multi-select-btn" onclick="toggleMultiSelect('msDistrito')">
+              <span class="multi-select-text" id="msDistritoText">Todos os Distritos</span>
               <i class="fas fa-chevron-down"></i>
             </button>
-            <div class="multi-select-panel" id="msStatusPanel"></div>
+            <div class="multi-select-panel" id="msDistritoPanel"></div>
           </div>
         </div>
 
+        <!-- 2️⃣ UNIDADE SOLICITANTE -->
         <div class="filter-box">
           <label>Unidade Solicitante:</label>
           <div class="multi-select" id="msUnidade">
@@ -155,6 +157,7 @@
           </div>
         </div>
 
+        <!-- 3️⃣ PRESTADOR -->
         <div class="filter-box">
           <label>Prestador:</label>
           <div class="multi-select" id="msPrestador">
@@ -166,6 +169,31 @@
           </div>
         </div>
 
+        <!-- 4️⃣ CBO ESPECIALIDADE (NOVO) -->
+        <div class="filter-box">
+          <label>CBO Especialidade:</label>
+          <div class="multi-select" id="msCboEspecialidade">
+            <button type="button" class="multi-select-btn" onclick="toggleMultiSelect('msCboEspecialidade')">
+              <span class="multi-select-text" id="msCboEspecialidadeText">Todas</span>
+              <i class="fas fa-chevron-down"></i>
+            </button>
+            <div class="multi-select-panel" id="msCboEspecialidadePanel"></div>
+          </div>
+        </div>
+
+        <!-- 5️⃣ STATUS -->
+        <div class="filter-box">
+          <label>Status:</label>
+          <div class="multi-select" id="msStatus">
+            <button type="button" class="multi-select-btn" onclick="toggleMultiSelect('msStatus')">
+              <span class="multi-select-text" id="msStatusText">Todos</span>
+              <i class="fas fa-chevron-down"></i>
+            </button>
+            <div class="multi-select-panel" id="msStatusPanel"></div>
+          </div>
+        </div>
+
+        <!-- 6️⃣ MÊS -->
         <div class="filter-box">
           <label>Filtrar por Mês:</label>
           <div class="multi-select" id="msMes">
@@ -174,17 +202,6 @@
               <i class="fas fa-chevron-down"></i>
             </button>
             <div class="multi-select-panel" id="msMesPanel"></div>
-          </div>
-        </div>
-
-        <div class="filter-box">
-          <label>Filtrar por Distrito:</label>
-          <div class="multi-select" id="msDistrito">
-            <button type="button" class="multi-select-btn" onclick="toggleMultiSelect('msDistrito')">
-              <span class="multi-select-text" id="msDistritoText">Todos os Distritos</span>
-              <i class="fas fa-chevron-down"></i>
-            </button>
-            <div class="multi-select-panel" id="msDistritoPanel"></div>
           </div>
         </div>
       </div>
