--- a/index.html
+++ b/index.html
@@ -252,6 +252,23 @@
       </div>
     </div>
 
+    <!-- ✅ SEGUNDA LINHA: MÊS + PIZZA (REORGANIZADO) -->
+    <div class="charts-container">
+      <div class="chart-box">
+        <h3 class="chart-title">Total de Pendências por Mês</h3>
+        <div class="chart-wrapper">
+          <canvas id="chartPendenciasPorMes"></canvas>
+        </div>
+      </div>
+
+      <div class="chart-box">
+        <h3 class="chart-title">Distribuição Percentual por Status</h3>
+        <div class="chart-wrapper-pizza">
+          <canvas id="chartPizzaStatus"></canvas>
+        </div>
+      </div>
+    </div>
+
     <!-- RESOLUTIVIDADE -->
     <div class="charts-container-resolutividade">
       <div class="chart-box">
@@ -265,23 +282,6 @@
         <h3 class="chart-title">Estatística de Resolutividade por Prestador</h3>
         <div class="chart-wrapper">
           <canvas id="chartResolutividadePrestador"></canvas>
-        </div>
-      </div>
-    </div>
-
-    <!-- PIZZA + POR MÊS -->
-    <div class="charts-container">
-      <div class="chart-box">
-        <h3 class="chart-title">Distribuição Percentual por Status</h3>
-        <div class="chart-wrapper-pizza">
-          <canvas id="chartPizzaStatus"></canvas>
-        </div>
-      </div>
-
-      <div class="chart-box">
-        <h3 class="chart-title">Total de Pendências por Mês</h3>
-        <div class="chart-wrapper">
-          <canvas id="chartPendenciasPorMes"></canvas>
         </div>
       </div>
     </div>
