--- a/index.html
+++ b/index.html
@@ -211,7 +211,6 @@
       </button>
     </div>
 
-    <!-- ✅ 1º GRÁFICO -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Pendências Não Resolvidas por Distrito</h3>
       <div class="chart-wrapper-distrito">
@@ -219,7 +218,6 @@
       </div>
     </div>
 
-    <!-- ✅ 2º GRÁFICO -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Registros Geral de Pendências por Distrito</h3>
       <div class="chart-wrapper-distrito">
@@ -227,11 +225,17 @@
       </div>
     </div>
 
-    <!-- ✅ 3º GRÁFICO -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Registros Geral de Pendências por Status</h3>
       <div class="chart-wrapper-distrito">
         <canvas id="chartStatus"></canvas>
+      </div>
+    </div>
+
+    <div class="chart-box chart-box-full">
+      <h3 class="chart-title">Evolução Temporal de Pendências</h3>
+      <div class="chart-wrapper-distrito">
+        <canvas id="chartEvolucaoTemporal"></canvas>
       </div>
     </div>
 
@@ -251,8 +255,7 @@
         </div>
       </div>
     </div>
-
-    <!-- ✅ SEGUNDA LINHA: MÊS + PIZZA (REORGANIZADO) -->
+      
     <div class="charts-container">
       <div class="chart-box">
         <h3 class="chart-title">Total de Pendências por Mês</h3>
@@ -286,7 +289,6 @@
       </div>
     </div>
 
-    <!-- ✅✅✅ NOVA TABELA -->
     <div class="table-section">
       <h3 class="section-title"><i class="fas fa-table"></i> Todas as Demandas</h3>
 
@@ -342,3 +344,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
