--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
         </div>
       </div>
 
+      <div class="metric-card card-success">
+        <div class="card-icon"><i class="fas fa-bell"></i></div>
+        <div class="card-info">
+          <h3 class="card-title">Total Geral de Pendências a Responder</h3>
+          <p class="card-value" id="totalPendenciasResponder">0</p>
+        </div>
+      </div>
+
       <div class="metric-card card-warning">
         <div class="card-icon"><i class="fas fa-clock"></i></div>
         <div class="card-info">
