--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="metric-card card-warning">
         <div class="card-icon"><i class="fas fa-clock"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Vencendo em 15 Dias</h3>
+          <h3 class="card-title">Vencendo em 15 Dias (A partir da data Do Início da Pendência)</h3>
           <p class="card-value" id="pendencias15">0</p>
         </div>
       </div>
@@ -69,7 +69,7 @@
       <div class="metric-card card-danger">
         <div class="card-icon"><i class="fas fa-exclamation-triangle"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Vencendo em 30 Dias</h3>
+          <h3 class="card-title">Vencendo em 30 Dias (A partir da data Do Início da Pendência)</h3>
           <p class="card-value" id="pendencias30">0</p>
         </div>
       </div>
@@ -366,3 +366,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
