--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="metric-card card-danger">
         <div class="card-icon"><i class="fas fa-exclamation-triangle"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Vencendo com 30 Dias (Contaando a partir da data Do Início da Pendência)</h3>
+          <h3 class="card-title">Vencendo com 30 Dias (Contando a partir da data Do Início da Pendência)</h3>
           <p class="card-value" id="pendencias30">0</p>
         </div>
       </div>
@@ -366,5 +366,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
