--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="metric-card card-primary">
         <div class="card-icon"><i class="fas fa-clipboard-list"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Total de Registros Geral</h3>
+          <h3 class="card-title">Total de Pendências - Registros Geral</h3>
           <p class="card-value" id="totalPendencias">0</p>
         </div>
       </div>
@@ -53,7 +53,7 @@
       <div class="metric-card card-success">
         <div class="card-icon"><i class="fas fa-bell"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Total Geral de Pendências a Responder</h3>
+          <h3 class="card-title">Total de Pendências a Responder</h3>
           <p class="card-value" id="totalPendenciasResponder">0</p>
         </div>
       </div>
@@ -366,6 +366,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
