--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <!-- ✅ SEÇÃO PAINÉIS DISTRITO -->
+    <!-- SEÇÃO PAINÉIS DISTRITO -->
     <div class="paineis-distrito-section">
       <h3 class="section-title"><i class="fas fa-map-marked-alt"></i> PAINÉIS DISTRITO</h3>
       <div class="paineis-distrito-grid">
@@ -142,7 +142,7 @@
       <h3 class="section-title"><i class="fas fa-filter"></i> Filtros</h3>
 
       <div class="filters-grid">
-        <!-- 1️⃣ DISTRITO -->
+        <!-- DISTRITO -->
         <div class="filter-box">
           <label>Filtrar por Distrito:</label>
           <div class="multi-select" id="msDistrito">
@@ -154,7 +154,7 @@
           </div>
         </div>
 
-        <!-- 2️⃣ UNIDADE SOLICITANTE -->
+        <!-- UNIDADE SOLICITANTE -->
         <div class="filter-box">
           <label>Unidade Solicitante:</label>
           <div class="multi-select" id="msUnidade">
@@ -166,7 +166,7 @@
           </div>
         </div>
 
-        <!-- 3️⃣ PRESTADOR -->
+        <!-- PRESTADOR -->
         <div class="filter-box">
           <label>Prestador:</label>
           <div class="multi-select" id="msPrestador">
@@ -178,7 +178,7 @@
           </div>
         </div>
 
-        <!-- 4️⃣ CBO ESPECIALIDADE -->
+        <!-- CBO ESPECIALIDADE -->
         <div class="filter-box">
           <label>CBO Especialidade:</label>
           <div class="multi-select" id="msCboEspecialidade">
@@ -190,7 +190,7 @@
           </div>
         </div>
 
-        <!-- 5️⃣ STATUS -->
+        <!-- STATUS -->
         <div class="filter-box">
           <label>Status:</label>
           <div class="multi-select" id="msStatus">
@@ -202,7 +202,7 @@
           </div>
         </div>
 
-        <!-- 6️⃣ MÊS -->
+        <!-- MÊS -->
         <div class="filter-box">
           <label>Filtrar por Mês:</label>
           <div class="multi-select" id="msMes">
@@ -366,6 +366,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
