--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="metric-card card-primary">
         <div class="card-icon"><i class="fas fa-clipboard-list"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Total de Pendências - Registros Geral</h3>
+          <h3 class="card-title">Registros de Pendências Geral</h3>
           <p class="card-value" id="totalPendencias">0</p>
         </div>
       </div>
@@ -53,7 +53,7 @@
       <div class="metric-card card-success">
         <div class="card-icon"><i class="fas fa-bell"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Total de Pendências a Responder</h3>
+          <h3 class="card-title">Registros de Pendências a Resolver</h3>
           <p class="card-value" id="totalPendenciasResponder">0</p>
         </div>
       </div>
@@ -61,20 +61,36 @@
       <div class="metric-card card-warning">
         <div class="card-icon"><i class="fas fa-clock"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Vencendo com 15 Dias (Contando a partir da data Do Início da Pendência)</h3>
-          <p class="card-value" id="pendencias15">0</p>
+          <h3 class="card-title">Registros de Pendências Canceladas Por Vencimento do Prazo</h3>
+          <p class="card-value" id="totalCanceladosVencimento">0</p>
         </div>
       </div>
 
       <div class="metric-card card-danger">
-        <div class="card-icon"><i class="fas fa-exclamation-triangle"></i></div>
+        <div class="card-icon"><i class="fas fa-check-circle"></i></div>
         <div class="card-info">
-          <h3 class="card-title">Vencendo com 30 Dias (Contando a partir da data Do Início da Pendência)</h3>
-          <p class="card-value" id="pendencias30">0</p>
+          <h3 class="card-title">Registros de Pendências Resolvidas</h3>
+          <p class="card-value" id="totalResolvidas">0</p>
         </div>
       </div>
 
       <div class="metric-card card-info">
+        <div class="card-icon"><i class="fas fa-calendar-check"></i></div>
+        <div class="card-info">
+          <h3 class="card-title">Registros de Pendências Agendadas</h3>
+          <p class="card-value" id="totalAgendadas">0</p>
+        </div>
+      </div>
+
+      <div class="metric-card card-secondary">
+        <div class="card-icon"><i class="fas fa-ban"></i></div>
+        <div class="card-info">
+          <h3 class="card-title">Registros de Pendências Canceladas/Geral</h3>
+          <p class="card-value" id="totalCanceladosGeral">0</p>
+        </div>
+      </div>
+
+      <div class="metric-card card-percentage">
         <div class="card-icon"><i class="fas fa-percentage"></i></div>
         <div class="card-info">
           <h3 class="card-title">Porcentagem Filtrada</h3>
@@ -228,14 +244,14 @@
     </div>
 
     <div class="chart-box chart-box-full">
-      <h3 class="chart-title">Registros Geral de Pendências por Distrito</h3>
+      <h3 class="chart-title">Pendências Resolvidas por Distrito</h3>
       <div class="chart-wrapper-distrito">
         <canvas id="chartDistritos"></canvas>
       </div>
     </div>
 
     <div class="chart-box chart-box-full">
-      <h3 class="chart-title">Registros Geral de Pendências por Status</h3>
+      <h3 class="chart-title">Registros de Pendências por Status</h3>
       <div class="chart-wrapper-distrito">
         <canvas id="chartStatus"></canvas>
       </div>
@@ -366,8 +382,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
