--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
     <!-- TABELA -->
     <div class="table-section">
-      <h3 class="section-title"><i class="fas fa-table"></i> Todas as Demandas (Demandas Sinalizadas em Amarelo/ Falta 04 dias para o vencimento)</h3>
+      <h3 class="section-title"><i class="fas fa-table"></i> Todas as Demandas (Demandas Sinalizadas em Amarelo/ Próximas do Vencimento para o cancelamento)</h3>
 
       <div class="table-search">
         <i class="fas fa-search"></i>
@@ -403,4 +403,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
