--- a/index.html
+++ b/index.html
@@ -44,49 +44,49 @@
     <div class="cards-grid">
       <div class="metric-card card-primary">
         <div class="card-info">
-          <h3 class="card-title">Registros de Pendências Geral</h3>
+          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS GERAL</h3>
           <p class="card-value" id="totalPendencias">0</p>
         </div>
       </div>
 
       <div class="metric-card card-success">
         <div class="card-info">
-          <h3 class="card-title">Registros de Pendências a Resolver</h3>
+          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS A<br>RESOLVER</h3>
           <p class="card-value" id="totalPendenciasResponder">0</p>
         </div>
       </div>
 
       <div class="metric-card card-warning">
         <div class="card-info">
-          <h3 class="card-title">Registros de Pendências Canceladas Por Vencimento do Prazo</h3>
+          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS CANCELADAS<br>POR VENCIMENTO DO PRAZO</h3>
           <p class="card-value" id="totalCanceladosVencimento">0</p>
         </div>
       </div>
 
       <div class="metric-card card-danger">
         <div class="card-info">
-          <h3 class="card-title">Registros de Pendências Resolvidas</h3>
+          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>RESOLVIDAS</h3>
           <p class="card-value" id="totalResolvidas">0</p>
         </div>
       </div>
 
       <div class="metric-card card-info">
         <div class="card-info">
-          <h3 class="card-title">Registros de Pendências Agendadas</h3>
+          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>AGENDADAS</h3>
           <p class="card-value" id="totalAgendadas">0</p>
         </div>
       </div>
 
       <div class="metric-card card-secondary">
         <div class="card-info">
-          <h3 class="card-title">Registros de Pendências Canceladas/Geral</h3>
+          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>CANCELADAS/GERAL</h3>
           <p class="card-value" id="totalCanceladosGeral">0</p>
         </div>
       </div>
 
       <div class="metric-card card-percentage">
         <div class="card-info">
-          <h3 class="card-title">Porcentagem Filtrada</h3>
+          <h3 class="card-title">PORCENTAGEM<br>FILTRADA</h3>
           <p class="card-value" id="percentFiltrados">100.0%</p>
         </div>
       </div>
