--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
         </div>
       </div>
 
+      <div class="metric-card card-info">
+        <div class="card-info">
+          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>AGENDADAS</h3>
+          <p class="card-value" id="totalAgendadas">0</p>
+        </div>
+      </div>
+
       <div class="metric-card card-secondary">
         <div class="card-info">
           <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>CANCELADAS/GERAL</h3>
@@ -222,7 +229,7 @@
       </button>
     </div>
 
-    <!-- GRÁFICO 1: Pendências Não Resolvidas por Distrito -->
+    <!-- ✅ GRÁFICO 1: Pendências Não Resolvidas por Distrito (MANTÉM O ORIGINAL) -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Pendências Não Resolvidas por Distrito</h3>
       <div class="chart-wrapper-distrito">
@@ -230,7 +237,7 @@
       </div>
     </div>
 
-    <!-- GRÁFICO 2: Pendências Resolvidas por Distrito (AGORA VERTICAL) -->
+    <!-- ✅ GRÁFICO 2: Pendências Resolvidas por Distrito (AGORA VERTICAL) -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Pendências Resolvidas por Distrito</h3>
       <div class="chart-wrapper-distrito">
@@ -238,7 +245,7 @@
       </div>
     </div>
 
-    <!-- GRÁFICO 3: Registros de Pendências por Status (AGORA VERTICAL) -->
+    <!-- ✅ GRÁFICO 3: Registros de Pendências por Status (AGORA VERTICAL) -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Registros de Pendências por Status</h3>
       <div class="chart-wrapper-distrito">
@@ -313,7 +320,7 @@
       </div>
     </div>
 
-    <!-- EVOLUÇÃO TEMPORAL -->
+    <!-- ✅ EVOLUÇÃO TEMPORAL -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Evolução Temporal de Pendências</h3>
       <div class="chart-wrapper-distrito">
