--- a/index.html
+++ b/index.html
@@ -70,12 +70,7 @@
         </div>
       </div>
 
-      <div class="metric-card card-info">
-        <div class="card-info">
-          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>AGENDADAS</h3>
-          <p class="card-value" id="totalAgendadas">0</p>
-        </div>
-      </div>
+      <!-- ✅ REMOVIDO: Card REGISTROS DE PENDÊNCIAS AGENDADAS -->
 
       <div class="metric-card card-secondary">
         <div class="card-info">
@@ -396,4 +391,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
